<resources>
    <string name="app_name" translatable="false">DateApp</string>
    <string name="enter_name">Enter your name</string>
    <string name="enter_name_hint">Enter Name</string>
    <string name="enter_age">Enter date of your birth</string>
    <string name="enter_age_hint">Birthday date</string>
    <string name="enter_enable_gps">Allow gps access</string>
    <string name="enter_enable_gps_button">Gps</string>
    <string name="gps_text">Localisation is needed for our app to function properly</string>
    <string name="enter_gender">Enter your gender</string>
    <string name="enter_gender_hint">Enter your gender</string>
    <string name="enter_male">Male</string>
    <string name="enter_female">Female</string>
    <string name="enter_other">Other</string>
    <string name="enter_prefer_not_to_say">Prefer not to say</string>
    <string name="enter_orientation">Enter your orientation</string>
    <string name="enter_orientation_hint">Select orientation</string>
    <string name="enter_passions">Enter passions</string>
    <string name="enter_passions_add">Add</string>
    <string name="enter_description">Enter description</string>
    <string name="enter_description_hint">Enter description</string>
    <string name="enter_photos">Add photo</string>
    <string name="enter_photos_hint">Add photo</string>
    <string name="enter_who_to_show">Decide who you want to see</string>
    <string name="enter_who_to_show_hint">Decide who you want to see</string>
    <string name="enter_who_to_show_genders">Select genders you want to see</string>
    <string name="enter_who_to_show_orientations">Select orientations you want to see</string>
    <string name="enter_who_to_show_distance">Select distance</string>
    <string name="enter_who_to_show_age">Select age</string>
    <string name="enter_who_to_show_passions">Select passions you want to see</string>
    <string name="next_fragment">Next</string>
    <string name="previous_fragment">Previous</string>
</resources>